# cacs_improvement

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
conf/: test.conf
scripts/: O_CLASSIFY.patch  fcntl.patch  kernel.patch  mkpatch  mkramdisk
scripts/glibc/: fcntl.h
scripts/kernel/: fcntl.c  libc-compat.h
src/: Makefile.am  Makefile.in  build.h  main.c  main.h
tests/: Makefile.am  Makefile.in  cacs_test.c
